Fixed bug when displaying on large screen sizes

--- a/public/src/css/app.css
+++ b/public/src/css/app.css
@@ -44,7 +44,12 @@ body, html {
   cursor: pointer;
 }
 
+.card__image {
+  max-width: 100%;
+}
+
 .card__image img {
+  width: 100%;
   max-width: 100%;
 }
 
