--- a/public/src/css/app.css
+++ b/public/src/css/app.css
@@ -49,8 +49,7 @@ body, html {
 }
 
 .card__image img {
-  width: 100%;
-  max-width: 100%;
+    max-width: 100%;
 }
 
 .card__content,
@@ -68,4 +67,10 @@ body, html {
 .card__details {
   display: none;
   opacity: 0;
+}
+
+@media (min-width: 1000px) {
+    .card__image {
+        margin: 0 2vw;
+    }
 }
